# rustybeer-aws-lambda

./: .gitignore  Cargo.toml  README.md  openapi.yml  serverless.doc.yml  serverless.yml
abv/: Cargo.toml
abv/src/: main.rs
dilution/: Cargo.toml
dilution/src/: main.rs
lambda_gateway/: Cargo.toml
lambda_gateway/src/: lib.rs
models/: AbvRequest.json  AbvResponse.json  DilutionRequest.json  DilutionResponse.json
