[package]
name = "abv"
version = "0.1.0"
authors = ["Heikki Hellgren <heiccih@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.3.0"
log = "0.4.8"

[dependencies.rustybeer]
git = "https://github.com/drodil/rustybeer"
branch = "library_support"
