[package]
name = "dilution"
version = "0.1.0"
authors = ["Heikki Hellgren <heiccih@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.3.0"
log = "0.4.8"
lambda_gateway = { path = "../lambda_gateway" }

[dependencies.rustybeer]
git = "https://github.com/drodil/rustybeer"
branch = "master"
